# shela

./: .gitignore  AGENTS.md  API-KEYS.md  BHUBEZI_CAFFEINE_ONE_SHOT.md  BUG_REPORT.md  Caffeine-README.md  DailyLedger-2026-03-04.md  KIMI-HANDOVER.md  MISSION_CONTROL.md  PROMPT_FOR_CAFFEINE.md  README.md  RENDER_DEPLOY_GUIDE.md  SA_TAXI_CONTEXT.md  TRANSFORMATION_SUMMARY.md  deploy-to-render.sh  netlify.toml  render.yaml
Competitive_Analysis/: inDrive_SA_Competitive_Analysis.md
Documents/: React2Shell-Vulnerability-Analysis.md
OpportunityScout-reports/: 2026-03-04-opportunity-scout-report-midday.md  2026-03-04-opportunity-scout-report-morning.md  2026-03-04-revenueradar-report-evening.md  2026-03-05-revenueradar-report-morning.md  AGENTS.md
Projects/shela/anchor/programs/reputation_nft/: Cargo.toml
Projects/shela/anchor/programs/reputation_nft/src/: lib.rs
Projects/shela/programs/reputation_nft/: Cargo.toml
Projects/shela/programs/reputation_nft/src/: lib.rs
Projects/shela/programs/slash_oracle/: Cargo.toml
Projects/shela/programs/slash_oracle/src/: lib.rs
agentgram/: AUDIT-REPORT.md  COMPLETION-SUMMARY.md
app/: README.md  index.html  package-lock.json  package.json
app/src/: App.tsx
backend/: main.mo  main.py  requirements.txt  server.py
bhubezi_export/: vite.config.ts
business-websites/: COMPLETION_SUMMARY.md  index.html
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
insurance-hackathon/: README.md
memory/: PRD.md
mosta-agent/: collaboration-log.json  content-log.json  mosta-bot.ts  state.json
(+416 files in other folders)
